# neurosight

./: .gitignore  README.md  brain_tumor_classifier.json  main.ipynb  pyproject.toml  server.py  utils.py
templates/: index.html  results.html  upload.html
