[tool.poetry]
name = "nuerosight"
version = "0.1.0"
description = "Machine Learning model that detects brain tumor based on brain scans and images."
authors = ["Penzulo <bhargav.deshpande@mitwpu.edu.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tensorflow = "^2.17.0"
tqdm = "^4.66.5"
opencv-python = "^4.10.0.84"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
